SUBDIRS = langinfo pics translations doc/manual doc/manpages

dist_bin_SCRIPTS = muttprint

docdir = $(datadir)/doc/muttprint
dist_doc_DATA = \
		sample-muttprintrc-de \
		sample-muttprintrc-en \
		sample-muttprintrc-es \
		sample-muttprintrc-fr \
		sample-muttprintrc-it \
		sample-muttprintrc-nl \
		sample-muttprintrc-si
