dist_pkgdata_DATA = \
		    BabyTuX_color.eps \
		    BabyTuX_color.png \
		    BabyTuX.eps \
		    BabyTuX.png \
		    Debian_color.eps \
		    Debian_color.png \
		    Debian.eps \
		    Debian.png \
		    Gentoo_color.eps \
		    Gentoo_color.png \
		    Gentoo.eps \
		    Gentoo.png \
		    penguin.eps \
		    penguin.jpg \
		    README.pics
