translationdir = $(pkgdatadir)/translations
dist_translation_DATA = \
			translation-cs.pl \
			translation-de.pl \
			translation-es.pl \
			translation-example.pl \
			translation-fi.pl \
			translation-fr.pl \
			translation-hu.pl \
			translation-it.pl \
			translation-nl.pl \
			translation-pl.pl \
			translation-pt.pl \
			translation-ru.pl \
			translation-sl.pl \
			translation-sv.pl
